agents/agentstudio-external-agent-boilerplate/scripts/templates/k8s-keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    ica4aa.io/external-dns: "enabled"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /realms/master/.well-known/openid-configuration
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3:043673801888:certificate/f5c23d72-f59a-4f38-a673-fa217fa21a40
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/load-balancer-attributes: preserve_client_ip.enabled=true,deregistration_delay.timeout_seconds=30
spec:
  ingressClassName: alb
  rules:
    - host: keycloak.shared-dev.agents.enterprise-advantage-emea.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
